[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Nintendo Game Boy emulator"
edition = "2024"
homepage = "https://github.com/LucasPickering/sad-boy"
keywords = []
license = "MIT"
name = "sad-boy"
repository = "https://github.com/LucasPickering/sad-boy"
version = "0.1.0"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.95.0"

[dependencies]
base64 = "0.22.1"
color-eyre = {version = "0.6.5", default-features = false}
lexopt = "0.3.2"
paste = "1.0.15"
signal-hook = {version = "0.4.4", default-features = false}
termion = {version = "4.0.6", default-features = false}
tracing = {version = "0.1.44", default-features = false}
tracing-subscriber = {version = "0.3.23", default-features = false, features = ["ansi", "fmt", "registry"]}
winnow = {version = "1.0.3", default-features = false, features = ["binary", "parser", "std"]}

[dev-dependencies]
proptest = {version = "1.11.0", default-features = false, features = ["attr-macro", "std"]}
rstest = {version = "0.26.1", default-features = false}

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]
all = {level = "deny", priority = -1}
pedantic = {level = "warn", priority = -1}

allow_attributes = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
large_enum_variant = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "deny"
module_inception = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
single_match = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
